# ai-devops-platform

./: .gitignore  Architecture diagram.jsx  Makefile  Project portfolio summary.md  README.md  docker-compose.yml  projects.md
centralized-logging-threat-analytics/: .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml
centralized-logging-threat-analytics/dashboards/: soc-overview.ndjson
centralized-logging-threat-analytics/helm/fluent-bit/: values.yaml
centralized-logging-threat-analytics/helm/opensearch/: values.yaml
centralized-logging-threat-analytics/scripts/: deploy.sh
centralized-logging-threat-analytics/sigma-rules/authentication/: brute-force-login.yaml  privilege-escalation.yaml
centralized-logging-threat-analytics/sigma-rules/custom/: llm-prompt-injection.yaml  sensitive-data-access.yaml
centralized-logging-threat-analytics/sigma-rules/data-exfiltration/: dns-tunneling.yaml  large-data-transfer.yaml
centralized-logging-threat-analytics/sigma-rules/lateral-movement/: suspicious-ssh.yaml
centralized-logging-threat-analytics/sigma-rules/malware/: reverse-shell.yaml
enterprise-cicd-framework/: .env.example  .gitignore  ARCHITECTURE.md  README.md
enterprise-cicd-framework/config/sonarqube/: sonar-project-go.properties  sonar-project-node.properties  sonar-project.properties
enterprise-cicd-framework/config/trivy/: trivy.yaml
enterprise-cicd-framework/docs/: INTEGRATION.md  SECURITY.md
enterprise-cicd-framework/examples/go-app/: Dockerfile
enterprise-cicd-framework/examples/node-app/: Dockerfile
enterprise-cicd-framework/examples/python-app/: Dockerfile  main.py  requirements.txt
enterprise-cicd-framework/scripts/: generate-sbom.sh  sign-image.sh
enterprise-cicd-framework/templates/github-actions/: go-app.yml  node-app.yml  python-app.yml
enterprise-cicd-framework/templates/gitlab-ci/: python-app.yml
k8s-agentops-platform/: .gitignore  ARCHITECTURE.md  Dockerfile  README.md
k8s-agentops-platform/.github/workflows/: build.yml
k8s-agentops-platform/controller/: go.mod
k8s-agentops-platform/controller/cmd/: main.go
k8s-agentops-platform/helm/agent-deployment/: Chart.yaml  values.yaml
k8s-agentops-platform/manifests/crds/: agentdeployment-crd.yaml
k8s-agentops-platform/manifests/examples/: agent-deployment-example.yaml
k8s-agentops-platform/monitoring/alerts/: agent-alerts.yaml
k8s-agentops-platform/monitoring/dashboards/: agent-overview.json
llm-security-gateway/: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
llm-security-gateway/.github/workflows/: ci.yml
llm-security-gateway/policies/rego/: authz.rego
llm-security-gateway/src/: __init__.py
llm-security-gateway/src/dlp/: __init__.py  engine.py
llm-security-gateway/src/gateway/: __init__.py  main.py  models.py
llm-security-gateway/src/rbac/: __init__.py  policy_engine.py
llm-security-gateway/src/routing/: __init__.py  model_router.py
llm-security-gateway/src/utils/: __init__.py  audit_logger.py  rate_limiter.py
mcp-aws-server/: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
mcp-aws-server/.github/workflows/: ci.yml
mcp-aws-server/docs/: architecture.md  mcp-tools.md  security.md
mcp-aws-server/examples/: README.md  claude_desktop_config.json  client_example.py
mcp-aws-server/infra/environments/dev/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
mcp-aws-server/infra/modules/ecs/: main.tf  outputs.tf  variables.tf
mcp-aws-server/infra/modules/rds/: main.tf  outputs.tf  variables.tf
mcp-aws-server/infra/modules/security/: main.tf  outputs.tf  variables.tf
mcp-aws-server/infra/modules/vpc/: main.tf  outputs.tf  variables.tf
mcp-aws-server/src/: __init__.py
mcp-aws-server/src/api/: main.py
mcp-aws-server/src/mcp_server/: __init__.py  models.py  server.py
mcp-aws-server/src/mcp_server/handlers/: __init__.py
mcp-aws-server/src/mcp_server/tools/: __init__.py  cloudwatch_tools.py  ec2_tools.py  ecs_tools.py  rds_tools.py
mcp-aws-server/src/utils/: __init__.py  audit.py  circuit_breaker.py
mcp-aws-server/tests/: __init__.py  conftest.py  test_circuit_breaker.py  test_cloudwatch_tools.py  test_ec2_tools.py  test_ecs_tools.py  test_rds_tools.py
multi-cloud-observability-fabric/: .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml
multi-cloud-observability-fabric/alerts/: applications.yaml  infrastructure.yaml
multi-cloud-observability-fabric/dashboards/applications/: red-dashboard.json
multi-cloud-observability-fabric/dashboards/infrastructure/: multi-cloud-overview.json
multi-cloud-observability-fabric/helm/kube-prometheus-stack/: values.yaml
multi-cloud-observability-fabric/helm/loki/: values.yaml
multi-cloud-observability-fabric/helm/opentelemetry-collector/: values.yaml
multi-cloud-observability-fabric/helm/tempo/: values.yaml
nl-automation-hub/: ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yaml  requirements.txt
nl-automation-hub/frontend/: package.json
nl-automation-hub/frontend/src/: App.tsx  index.css
nl-automation-hub/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  secret.yaml  service.yaml
nl-automation-hub/src/agent/: graph.py
nl-automation-hub/src/api/: main.py
nl-automation-hub/src/config/: settings.py
nl-automation-hub/src/models/: schemas.py
nl-automation-hub/src/tools/: registry.py
(+16 files in other folders)
