[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-security-gateway"
version = "0.1.0"
description = "Enterprise security gateway for LLM applications with DLP, PII redaction, RBAC, and rate limiting"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Jose", email = "jose@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["llm", "security", "gateway", "dlp", "pii", "rbac", "ai", "claude", "gpt"]

dependencies = [
    # Web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",

    # PII detection and redaction
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",

    # DLP and pattern matching
    "regex>=2023.12.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # RBAC with OPA
    "opa-python-client>=1.3.0",

    # Rate limiting and caching
    "redis>=5.0.0",
    "redis-py-cluster>=2.1.0",

    # Database
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",

    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",

    # HTTP client for model APIs
    "httpx>=0.26.0",
    "anthropic>=0.18.0",
    "openai>=1.10.0",

    # Monitoring and logging
    "prometheus-client>=0.19.0",
    "python-json-logger>=2.0.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "faker>=22.0.0",

    # Linting and formatting
    "black>=24.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",

    # Type stubs
    "types-redis>=4.6.0",
    "types-passlib>=1.7.0",

    # Development tools
    "ipython>=8.20.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
gateway = "src.gateway.main:main"

[project.urls]
Homepage = "https://github.com/yourusername/llm-security-gateway"
Documentation = "https://github.com/yourusername/llm-security-gateway/docs"
Repository = "https://github.com/yourusername/llm-security-gateway"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"
